--- a/pom.xml
+++ b/pom.xml
@@ -117,5 +117,12 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>${spring.security.version}</version>
 		</dependency>
+		
+		<dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-rest-webmvc</artifactId>
+        <version>2.5.3.RELEASE</version>
+    </dependency>
+    
   </dependencies>
 </project>
