--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
         <version>2.5.3.RELEASE</version>
     </dependency>
     
+    <dependency>
+    <groupId>com.thetransactioncompany</groupId>
+    <artifactId>cors-filter</artifactId>
+    <version>2.5</version>
+    </dependency>
+    
     
     
   </dependencies>
